# nix

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .sops.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  boot.nix  config.nix  env.nix  flake.nix  flatpak.nix  gnome.nix  graphics.nix  hardware-auto.nix  hardware.nix  hardwarex.nix  hardwarez.nix  home.nix  locale.nix  misc.nix  network.nix  overlays.nix  packages.nix  programs.nix  security.nix  services.nix  statix.toml  swap.nix  systemd.nix  treefmt.toml  users.nix  xdg.nix
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
apps/: README.md  default.nix
data/: userdata.nix  users.nix
docs/: cloudflare-tunnel.md  deployment.md  flake-package.md  hosts.md  incus-readiness.md  incus-vms.md  linting.md  migration-manager.md  nginx-vhosts.md  nginx.md  nixbot-security-trust-model.md  podman-compose.md  secrets.md  services.md  ssh-access.md  systemd-user-manager.md
hardware/: asus-fa401wv.nix  gmtek-evo-x2.nix
hosts/: default.nix  nixbot.nix  nixbot.yaml  pvl-common.nix
lib/: audio.nix  boot.nix  common-audio.nix  common-boot.nix  common-graphics.nix  common-hardware.nix  common-kernel.nix  common-locale.nix  common-network.nix  common-security.nix  common-services.nix  common-systemd.nix  common-users.nix  desktop-base.nix  flakelib.nix  flatpak.nix  gdm-rdp.nix  gdm.nix  gnome-rdp.nix  gnome.nix  gpg.nix  handbrake.nix  hardware.nix  incus-machine.nix  incus-vm.nix  incus.nix  kernel.nix  keyd.nix  locale.nix  mdns.nix  neovim.nix  network-wifi.nix  network-wireless.nix  (+24 more)
(+1391 files in other folders)
