[workspace]
resolver = "3"
members = [
  "pkgs/examples/hello-rust",
  "pkgs/support/nats-http-bridge",
  "pkgs/tools/nats-wrecking-ball",
]

[workspace.dependencies]
anyhow = "1"
async-nats = "0.47"
bytes = "1"
clap = "4.5"
futures-util = "0.3"
humantime = "2"
rand = "0.10.1"
reqwest = { version = "0.12", default-features = false }
serde = "1"
serde_yaml = "0.9"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
